# seedance

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: api.rs  cli.rs  config.rs  error.rs  main.rs  manifest.rs  media.rs  output.rs
src/commands/: agent_info.rs  audio_to_video.rs  cancel.rs  character_sheet.rs  config.rs  doctor.rs  download.rs  generate.rs  mod.rs  models.rs  prep_face.rs  skill.rs  status.rs  update.rs  upload.rs
tests/: contract.rs
