[package]
name = "seedance"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "Generate video with ByteDance Seedance 2.0 from the terminal. Agent-friendly."
license = "MIT"
repository = "https://github.com/199-biotechnologies/seedance"
homepage = "https://github.com/199-biotechnologies/seedance"
readme = "README.md"
keywords = ["seedance", "bytedance", "video", "ai", "cli"]
categories = ["command-line-utilities", "multimedia::video"]

[[bin]]
name = "seedance"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
figment = { version = "0.10", features = ["toml", "env"] }
toml_edit = "0.23"
directories = "6"
which = "7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
base64 = "0.22"
mime_guess = "2"
indicatif = "0.17"
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
